# yew-learning-diary

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  screen.css
docs/: index-ffbe5b8761477162.js  index-ffbe5b8761477162_bg.wasm  index.html
src/: main.rs
src/lib/: data.rs  lib.rs  mod.rs  pages.rs
src/lib/components/: components.rs
src/lib/data/: datastore.rs
src/lib/pages/: about.rs  home.rs
