# Yew-Learning-Diary cargo configuration file

[package]
name = "yew-learning-diary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yewlearningdiary"
path = "src/lib/mod.rs"

[dependencies]
yew = "0.19"
